--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -1,9 +1,9 @@
 name: Update Leaderboard
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
-  workflow_dispatch:  # Allows manual triggering
+  push:
+    branches:
+      - main
 
 jobs:
   update-leaderboard:
@@ -11,25 +11,27 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: 3.x
 
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run leaderboard script
-        run: python update_leaderboard.py --owner ${{ secrets.REPO_OWNER }} --repo ${{ secrets.REPO_NAME }}
+      - name: Update leaderboard
+        run: python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
 
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md leaderboard.html
-          git commit -m "Update leaderboard"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          if ! git diff --cached --quiet; then
+            git commit -m "Update leaderboard"
+            git push
+          else
+            echo "No changes to commit"
+          fi
