--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -6,6 +6,7 @@ on:
       - main
   schedule:
     - cron: "0 * * * *"  # Runs every hour
+  workflow_dispatch:  # Enables manual runs
 
 jobs:
   update-leaderboard:
