--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -1,46 +1,56 @@
 name: Update Leaderboard
 
 on:
-  push:
-    branches:
-      - main
   schedule:
     - cron: "0 * * * *"  # Runs every hour
-  workflow_dispatch:  # Enables manual runs
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-leaderboard:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # Step 1: Checkout the original repository
+      - name: Checkout original repository
         uses: actions/checkout@v2
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.x
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: pip install requests
 
-      - name: Update leaderboard
+      # Step 4: Generate leaderboard
+      - name: Generate leaderboard
         run: python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
 
-      - name: Commit and push changes
+      # Step 5: Update README with Top 5 contributors
+      - name: Commit and push top 5 to README
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
           if ! git diff --cached --quiet; then
-            git commit -m "Update README with leaderboard"
+            git commit -m "Update Top 5 leaderboard in README.md"
             git push
           else
-            echo "No changes to commit for README"
-          fi
+            echo "No changes to commit"
 
-      - name: Deploy leaderboard.html to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./  # Deploys all files in the root directory, including leaderboard.html
+      # Step 6: Push the full leaderboard.html to your website repository
+      - name: Push full leaderboard to your GitHub Pages repository
+        run: |
+          git clone https://github.com/akmalel/OpenCyb3r.git website-repo
+          cp leaderboard.html website-repo/
+          cd website-repo
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add leaderboard.html
+          if ! git diff --cached --quiet; then
+            git commit -m "Update full leaderboard for website"
+            git push
+          else
+            echo "No changes to commit"
