--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -1,56 +1,40 @@
 name: Update Leaderboard
 
 on:
-  schedule:
-    - cron: "0 * * * *"  # Runs every hour
-  workflow_dispatch:  # Allows manual triggering
+  push:
+    branches:
+      - main
 
 jobs:
   update-leaderboard:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the original repository
-      - name: Checkout original repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.x
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: pip install requests
 
-      # Step 4: Generate leaderboard
-      - name: Generate leaderboard
-        run: python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
+      - name: Run update script
+        run: |
+          echo "Running update script"
+          python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
+          echo "Update script completed"
 
-      # Step 5: Update README with Top 5 contributors
-      - name: Commit and push top 5 to README
+      - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
+          git add README.md leaderboard.html
           if ! git diff --cached --quiet; then
-            git commit -m "Update Top 5 leaderboard in README.md"
+            git commit -m "Update leaderboard"
             git push
           else
             echo "No changes to commit"
-
-      # Step 6: Push the full leaderboard.html to your website repository
-      - name: Push full leaderboard to your GitHub Pages repository
-        run: |
-          git clone https://github.com/akmalel/OpenCyb3r.git website-repo
-          cp leaderboard.html website-repo/
-          cd website-repo
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add leaderboard.html
-          if ! git diff --cached --quiet; then
-            git commit -m "Update full leaderboard for website"
-            git push
-          else
-            echo "No changes to commit"
+          fi
