--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -22,19 +22,18 @@ jobs:
         run: pip install requests
 
       - name: Run update script
-        run: |
-          echo "Running update script"
-          python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
-          echo "Update script completed"
+        run: python update_leaderboard.py --owner ${{ github.repository_owner }} --repo ${{ github.event.repository.name }}
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md leaderboard.html
           if ! git diff --cached --quiet; then
             git commit -m "Update leaderboard"
-            git push
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
           else
             echo "No changes to commit"
           fi
